feat: add react-router-dom

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 8vmin;
   pointer-events: none;
 }
 
@@ -11,21 +11,6 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
@@ -36,4 +21,38 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.App-header {
+  background-color: #282c34;
+  height: 10vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-header h1 {
+  font-size: calc(16px + 2vmin);
+}
+
+.App-header h1 {
+  font-size: calc(20px + 2vmin);
+}
+
+.App-header ul {
+  display: flex;
+}
+
+.App-header li {
+  list-style: none;
+  margin-left: 20px;
+}
+
+.App-header a {
+  color: #61dafb;
+  text-decoration: none;
 }
